Update NotesCmp.